<resources>
    <string name="app_name">RealEstateApp</string>
    <string name="new_user">Not Registered? <b>SignUp</b></string>
    <string name="create_new_account">Create New Account</string>
    <string name="register_name">Name</string>
    <string name="register_email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="please_login">Please Login</string>
    <string name="register">Register</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="add_estate_bedrooms">Bedrooms</string>

    <string-array name="bedroom">
        <item>Bedrooms</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

    <string-array name="bath">
        <item>Bathrooms</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

    <string-array name="room">
        <item>Rooms</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="listings">Property Listings</string>
    <string name="Save_Property">Save</string>
    <string name="postalcode">Postal Code</string>
    <string name="city">City</string>
    <string name="upload">Upload</string>
    <string name="select_image">Select Image</string>
    <string name="upload_image">Upload Image</string>
    <string name="properties_listings">Properties Listings</string>
    <string name="address">Address</string>
    <string name="bedrooms">Bedrooms</string>
    <string name="bathroom">Bathrooms</string>
    <string name="rooms">Rooms</string>
    <string name="property_address">Property Address</string>
    <string name="terms">1. TERMS OF USE\n\nBy downloading, browsing, accessing or using this Sample Store mobile application (Mobile Application), you agree to be bound by these Terms and Conditions of Use. We reserve the right to amend these terms and conditions at any time. If you disagree with any of these Terms and Conditions of Use, you must immediately discontinue your access to the Mobile Application and your use of the services offered on the Mobile Application. Continued use of the Mobile Application will constitute acceptance of these Terms and Conditions of Use, as may be amended from time to time.\n\n2. DEFINITIONS\nIn these Terms and Conditions of Use, the following capitalised terms shall have the following meanings, except where the context otherwise requires:\n\n"Account" means an account created by a User on the Mobile Application as part of Registration.\n\n"Merchant" refers to any entity whose products or Samples can be purchased and/or redeemed (as the case may be) via the Mobile Application.\n\n"Privacy Policy" means the privacy policy set out in Clause 14 of these Terms and Conditions of Use.\n\n"Redeem" means to redeem a Merchantâ€™s products or Samples on these Terms and Conditions of Use and "Redemption" means the act of redeeming such products or Samples.\n\n"Register" means to create an Account on the Mobile Application and "Registration" means the act of creating such an Account.\n\n"Samples" means samples of Merchantâ€™s products and/or Merchantâ€™s services, including without limitation, any vouchers for the redemption of such services, and "Sample" means any one of them.\n\n"Services" means all the services provided by Canada Post Limited via the Mobile Application to Users, and "Service" means any one of them,\n\n"Users" means users of the Mobile Application, including you and "User" means any one of them.\n\n3. GENERAL ISSUES ABOUT THE MOBILE APPLICATION AND THE SERVICES\n3.1 Applicability of terms and conditions: The use of any Services and/or the Mobile Application and the making of any Redemptions are subject to these Terms and Conditions of Use.\n\n3.2 Location: The Mobile Application, the Services and any Redemptions are intended solely for use by Users who access the Mobile Application in Singapore. We make no representation that the Services (or any goods or services) are available or otherwise suitable for use outside of Singapore. Notwithstanding the above, if you access the Mobile Application, use the Services or make any Redemptions from locations outside Singapore, you do so on your own initiative and are responsible for the consequences and for compliance with all applicable laws.\n\n3.3 Scope: The Mobile Application, the Services and any Redemptions are for your non-commercial, personal use only and must not be used for business purposes.\n\n3.4 Prevention on use: We reserve the right to prevent you using the Mobile Application and the Service (or any part of them) and to prevent you from making any Redemptions.\n\n3.5 Equipment and Networks: The provision of the Services and the Mobile Application does not include the provision of a mobile telephone or handheld device or other necessary equipment to access the Mobile Application or the Services or make any Redemptions. To use the Mobile Application or Services or to make Redemptions, you will require Internet connectivity and appropriate telecommunication links. You acknowledge that the terms of agreement with your respective mobile network provider ("Mobile Provider") will continue to apply when using the Mobile Application. As a result, you may be charged by the Mobile Provider for access to network connection services for the duration of the connection while accessing the Mobile Application or any such third party charges as may arise. You accept responsibility for any such charges that arise.\n\n3.6 Permission to use Mobile Application: If you are not the bill payer for the mobile telephone or handheld device being used to access the Mobile Application, you will be assumed to have received permission from the bill payer for using the Mobile Application.\n\n3.7 License to Use Material: By submitting any text or images (including photographs) (â€œMaterialâ€) via the Application, you represent that you are the owner of the Material, or have proper authorization from the owner of the Material to use, reproduce and distribute it. You hereby grant us a worldwide, royalty-free, non-exclusive license to use the Material to promote any products or services.</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="sign_up_with_google">Sign Up with GMAIL</string>
</resources>