<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UploadActivity"
    android:background="@color/grey_5">

    <include
        android:id="@+id/mainToolBar"
        layout="@layout/toolbar_main"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    
    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/listings"
        android:textSize="@dimen/heading_font_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainToolBar"/>

    <EditText
        android:id="@+id/addressEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/property_address"
        app:layout_constraintEnd_toEndOf="parent"
        android:drawableStart="@drawable/ic_location"
        android:drawablePadding="10dp"
        android:layout_marginTop="@dimen/standard_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:padding="10dp"
        android:layout_margin="@dimen/standard_margin"
        android:textColor="@color/black"
        android:textColorHint="@color/gray01" />

    <EditText
        android:id="@+id/postalCodeEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPostalAddress"
        android:hint="@string/postalcode"
        android:drawableStart="@drawable/ic_postal"
        android:drawablePadding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/standard_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addressEditText"
        android:padding="10dp"
        android:layout_margin="@dimen/standard_margin"
        android:textColor="@color/black"
        android:textColorHint="@color/gray01"/>

    <EditText
        android:id="@+id/cityEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_city"
        android:drawablePadding="10dp"
        android:inputType="text"
        android:hint="@string/city"
        android:layout_margin="@dimen/standard_margin"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/standard_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/postalCodeEditText"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/gray01"/>

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/standard_margin"
        android:entries="@array/bedroom"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cityEditText" />

    <Spinner
        android:id="@+id/spinnerBath"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/standard_margin"
        android:entries="@array/bath"
        app:layout_constraintLeft_toRightOf="@+id/spinner"
        app:layout_constraintTop_toBottomOf="@+id/cityEditText" />

    <Spinner
        android:id="@+id/spinnerRoom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/standard_margin"
        android:entries="@array/room"
        app:layout_constraintLeft_toRightOf="@+id/spinnerBath"
        app:layout_constraintTop_toBottomOf="@+id/cityEditText" />


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerRoom"
        android:src="@drawable/ic_baseline_drive_folder_upload_24"/>

    <Button
        android:id="@+id/select"
        android:layout_width="wrap_content"
        android:layout_margin="@dimen/standard_margin"
        android:layout_height="wrap_content"
        android:text="@string/select_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/spinnerRoom"
        android:layout_marginTop="@dimen/standard_margin"/>

    <Button
        android:id="@+id/upload"
        android:layout_width="wrap_content"
        android:layout_margin="@dimen/standard_margin"
        android:layout_height="wrap_content"
        android:text="@string/upload_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/select"
        android:layout_marginTop="@dimen/standard_margin"/>

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_margin="@dimen/standard_margin"
        android:layout_height="wrap_content"
        android:text="@string/Save_Property"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        android:layout_marginTop="@dimen/standard_margin"/>


</androidx.constraintlayout.widget.ConstraintLayout>